@@ -74,8 +74,6 @@ import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.mockserver.integration.ClientAndServer;
-import org.mockserver.mock.action.ExpectationResponseCallback;
-import org.mockserver.model.HttpRequest;
 import org.mockserver.model.HttpResponse;
 import org.mockserver.model.Parameter;
 import com.formkiq.aws.dynamodb.DbKeys;
@@ -165,7 +163,7 @@ public class StagingS3CreateTest implements DbKeys {
   private static FolderIndexProcessor folderIndexProcesor;
 
   /** {@link Gson}. */
-  private static Gson gson =
+  private static final Gson GSON =
       new GsonBuilder().disableHtmlEscaping().setDateFormat(DateUtil.DATE_FORMAT).create();
 
   /** Register LocalStack extension. */
@@ -228,11 +226,10 @@ public class StagingS3CreateTest implements DbKeys {
    * Before Class.
    *
    * @throws URISyntaxException URISyntaxException
-   * @throws InterruptedException InterruptedException
    * @throws IOException IOException
    */
   @BeforeAll
-  public static void beforeClass() throws URISyntaxException, InterruptedException, IOException {
+  public static void beforeClass() throws URISyntaxException, IOException {
 
     createAwService();
     awsServices.register(SnsService.class, new SnsServiceExtension());
@@ -302,36 +299,32 @@ public class StagingS3CreateTest implements DbKeys {
    */
   private static void createMockServer() {
 
-    mockServer = startClientAndServer(Integer.valueOf(PORT));
+    mockServer = startClientAndServer(PORT);
 
     final String documentId = "12345";
     mockServer.when(request().withMethod("POST").withPath("/documents/" + documentId + "/tags"))
-        .respond(new ExpectationResponseCallback() {
-          @SuppressWarnings("unchecked")
-          @Override
-          public HttpResponse handle(final HttpRequest httpRequest) throws Exception {
+        .respond(httpRequest -> {
 
-            Map<String, Object> map = gson.fromJson(httpRequest.getBodyAsString(), Map.class);
-            List<Map<String, Object>> list = (List<Map<String, Object>>) map.get("tags");
-            assertEquals(2, list.size());
-            assertEquals("category", list.get(0).get("key"));
-            assertEquals("document", list.get(0).get("value"));
-            assertEquals("status", list.get(1).get("key"));
-            assertEquals("[active, notactive]", list.get(1).get("values").toString());
+          Map<String, Object> map = GSON.fromJson(httpRequest.getBodyAsString(), Map.class);
+          List<Map<String, Object>> list = (List<Map<String, Object>>) map.get("tags");
+          assertEquals(2, list.size());
+          assertEquals("category", list.get(0).get("key"));
+          assertEquals("document", list.get(0).get("value"));
+          assertEquals("status", list.get(1).get("key"));
+          assertEquals("[active, notactive]", list.get(1).get("values").toString());
 
-            String siteId = null;
-            Optional<Parameter> p = httpRequest.getQueryStringParameterList().stream()
-                .filter(s -> "siteId".equals(s.getName().getValue())).findFirst();
-            if (p.isPresent()) {
-              siteId = p.get().getValues().get(0).getValue();
-            }
-
-            Collection<DocumentTag> tags =
-                Arrays.asList(new DocumentTag(documentId, "test", "novalue", new Date(), "joe"));
-            service.addTags(siteId, documentId, tags, null);
-
-            return org.mockserver.model.HttpResponse.response("{}");
+          String siteId = null;
+          Optional<Parameter> p = httpRequest.getQueryStringParameterList().stream()
+              .filter(s -> "siteId".equals(s.getName().getValue())).findFirst();
+          if (p.isPresent()) {
+            siteId = p.get().getValues().get(0).getValue();
           }
+
+          Collection<DocumentTag> tags =
+              List.of(new DocumentTag(documentId, "test", "novalue", new Date(), "joe"));
+          service.addTags(siteId, documentId, tags, null);
+
+          return HttpResponse.response("{}");
         });
   }
 
@@ -428,7 +421,7 @@ public class StagingS3CreateTest implements DbKeys {
 
     for (String queue : Arrays.asList(snsSqsCreateQueueUrl, snsSqsDeleteQueueUrl)) {
       ReceiveMessageResponse response = sqsService.receiveMessages(queue);
-      while (response.messages().size() > 0) {
+      while (!response.messages().isEmpty()) {
         for (Message msg : response.messages()) {
           sqsService.deleteMessage(queue, msg.receiptHandle());
         }
@@ -438,16 +431,15 @@ public class StagingS3CreateTest implements DbKeys {
     }
   }
 
-  private void createDocument(final String siteId, final String userId, final byte[] content,
-      final String docId) throws ValidationException {
+  private void createDocument(final byte[] content, final String docId) throws ValidationException {
     DynamicDocumentItem item = new DynamicDocumentItem(new HashMap<>());
     item.setDocumentId(docId == null ? UUID.randomUUID().toString() : docId);
-    item.setUserId(userId);
+    item.setUserId("JohnDoe");
     item.setInsertedDate(new Date());
     final String documentId = item.getDocumentId();
-    service.saveDocument(siteId, item, null);
+    service.saveDocument("default", item, null);
 
-    final String key = createS3Key(siteId, documentId);
+    final String key = createS3Key("default", documentId);
     s3.putObject(DOCUMENTS_BUCKET, key, content, null, null);
   }
 
@@ -462,7 +454,7 @@ public class StagingS3CreateTest implements DbKeys {
     DynamicDocumentItem item = new DynamicDocumentItem(Collections.emptyMap());
     item.setDocumentId(UUID.randomUUID().toString());
     item.put("content", Base64.getEncoder().encodeToString(content.getBytes(UTF_8)));
-    item.setContentLength(Long.valueOf(content.length()));
+    item.setContentLength((long) content.length());
     item.setContentType("plain/text");
     item.setInsertedDate(new Date());
     item.setPath("test.txt");
@@ -475,8 +467,8 @@ public class StagingS3CreateTest implements DbKeys {
 
     Map<String, Object> record = Map.of("eventName", "ObjectCreated", "s3",
         Map.of("bucket", Map.of("name", STAGING_BUCKET), "object", Map.of("key", s3Key)));
-    String body = gson.toJson(Map.of("Records", Arrays.asList(record)));
-    List<Map<String, Object>> records = Arrays.asList(Map.of("body", body));
+    String body = GSON.toJson(Map.of("Records", List.of(record)));
+    List<Map<String, Object>> records = List.of(Map.of("body", body));
 
     return new HashMap<>(Map.of("Records", records));
   }
@@ -498,8 +490,8 @@ public class StagingS3CreateTest implements DbKeys {
 
     if (copy.isPresent()) {
 
-      uuid = Arrays.asList(copy.get().split(" ")).stream().map(s -> resetDatabaseKey(siteId, s))
-          .filter(s -> {
+      uuid =
+          Arrays.stream(copy.get().split(" ")).map(s -> resetDatabaseKey(siteId, s)).filter(s -> {
             try {
               int pos = s.indexOf("/");
               UUID.fromString(pos > 0 ? s.substring(pos + 1) : s);
@@ -549,7 +541,7 @@ public class StagingS3CreateTest implements DbKeys {
 
     String key = createDatabaseKey(siteId, documentId + FORMKIQ_B64_EXT);
 
-    byte[] content = gson.toJson(docitem).getBytes(UTF_8);
+    byte[] content = GSON.toJson(docitem).getBytes(UTF_8);
     s3.putObject(STAGING_BUCKET, key, content, null, null);
 
     handleRequest(loadFileAsMap(this, "/objectcreate-event4.json", UUID1, key));
@@ -572,7 +564,7 @@ public class StagingS3CreateTest implements DbKeys {
 
     String key = createDatabaseKey(siteId, documentId + FORMKIQ_B64_EXT);
 
-    byte[] content = gson.toJson(docitem).getBytes(UTF_8);
+    byte[] content = GSON.toJson(docitem).getBytes(UTF_8);
     s3.putObject(STAGING_BUCKET, key, content, null, null);
 
     // when
@@ -693,7 +685,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testCopyFile01() throws Exception {
     for (String siteId : Arrays.asList(null, DEFAULT_SITE_ID, UUID.randomUUID().toString())) {
       String documentId = UUID.randomUUID().toString();
@@ -707,7 +699,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testCopyFile02() throws Exception {
     int i = 0;
     for (String siteId : Arrays.asList(null, DEFAULT_SITE_ID, UUID.randomUUID().toString())) {
@@ -723,7 +715,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testCopyFile03() throws Exception {
     final String documentId = "something/where/test.pdf";
     for (String siteId : Arrays.asList(DEFAULT_SITE_ID, UUID.randomUUID().toString())) {
@@ -737,7 +729,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testDocumentsCompress() throws Exception {
     // given
     String fileContent = loadFile(this, "/compression-request-file.json");
@@ -754,7 +746,7 @@ public class StagingS3CreateTest implements DbKeys {
       final String docId = docIds.get(i);
       final String path = filePathsToCompress.get(i);
       final byte[] content = loadFileAsByteArray(this, path);
-      this.createDocument("default", "JohnDoe", content, docId);
+      this.createDocument(content, docId);
       expectedChecksums.put(docId, DocumentCompressorTest.getContentChecksum(content));
     }
     assertFalse(expectedChecksums.isEmpty());
@@ -776,13 +768,13 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension01() throws IOException {
     DynamicDocumentItem item = createDocumentItem();
 
     item.put("tags",
-        Arrays.asList(Map.of("documentId", item.getDocumentId(), "key", "category", "value",
-            "person", "insertedDate", new Date(), "userId", "joe", "type",
+        List.of(Map.of("documentId", item.getDocumentId(), "key", "category", "value", "person",
+            "insertedDate", new Date(), "userId", "joe", "type",
             DocumentTagType.USERDEFINED.name())));
 
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
@@ -796,7 +788,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension02() throws IOException {
     DynamicDocumentItem item = createDocumentItem();
 
@@ -811,7 +803,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension03() throws IOException {
     DynamicDocumentItem item = createDocumentItem();
     item.put("content", null);
@@ -829,7 +821,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension04() throws IOException {
     DynamicDocumentItem item = createDocumentItem();
     item.setDocumentId(null);
@@ -845,7 +837,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension05() throws IOException {
     String documentId0 = "0d1a788d-9a70-418a-8c33-a9ee9c1a0173";
     String documentId1 = "24af57ca-f61d-4ff8-b8a0-d7666073560e";
@@ -870,7 +862,7 @@ public class StagingS3CreateTest implements DbKeys {
       DocumentItem i =
           service.findDocument(siteId, documentId0, true, null, MAX_RESULTS).getResult();
       assertNull(i.getContentType());
-      verifyBelongsToDocument(i, documentId0, Arrays.asList(documentId1, documentId2));
+      verifyBelongsToDocument(i, Arrays.asList(documentId1, documentId2));
 
       List<DocumentTag> tags =
           service.findDocumentTags(siteId, documentId0, null, MAX_RESULTS).getResults();
@@ -914,15 +906,15 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension06() throws IOException {
     String timeToLive = "1612061365";
     DynamicDocumentItem item = createDocumentItem();
     item.put("TimeToLive", timeToLive);
 
     item.put("tags",
-        Arrays.asList(Map.of("documentId", item.getDocumentId(), "key", "category", "value",
-            "person", "insertedDate", new Date(), "userId", "joe", "type",
+        List.of(Map.of("documentId", item.getDocumentId(), "key", "category", "value", "person",
+            "insertedDate", new Date(), "userId", "joe", "type",
             DocumentTagType.USERDEFINED.name())));
 
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
@@ -950,7 +942,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension07() throws IOException {
     Map<String, Object> data = new HashMap<>();
     data.put("userId", "joesmith");
@@ -969,7 +961,7 @@ public class StagingS3CreateTest implements DbKeys {
 
       Map<String, Object> map = loadFileAsMap(this, "/objectcreate-event4.json", UUID1, key);
 
-      byte[] content = gson.toJson(ditem).getBytes(UTF_8);
+      byte[] content = GSON.toJson(ditem).getBytes(UTF_8);
       s3.putObject(STAGING_BUCKET, key, content, null, null);
 
       // when
@@ -1002,7 +994,7 @@ public class StagingS3CreateTest implements DbKeys {
       assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "category", "value",
           "document", "type", "USERDEFINED", "userId", "joesmith"));
 
-      assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "status", "values",
+      assertEqualsTag(tags.get(i), Map.of("documentId", documentId, "key", "status", "values",
           Arrays.asList("active", "notactive"), "type", "USERDEFINED", "userId", "joesmith"));
     }
   }
@@ -1013,7 +1005,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension08() throws IOException {
     Map<String, Object> data = new HashMap<>();
     data.put("userId", "joesmith");
@@ -1034,7 +1026,7 @@ public class StagingS3CreateTest implements DbKeys {
 
       Map<String, Object> map = loadFileAsMap(this, "/objectcreate-event4.json", UUID1, key);
 
-      byte[] content = gson.toJson(ditem).getBytes(UTF_8);
+      byte[] content = GSON.toJson(ditem).getBytes(UTF_8);
       s3.putObject(STAGING_BUCKET, key, content, null, null);
 
       // when
@@ -1064,7 +1056,7 @@ public class StagingS3CreateTest implements DbKeys {
       assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "category", "value",
           "document", "type", "USERDEFINED", "userId", "joesmith"));
 
-      assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "status", "values",
+      assertEqualsTag(tags.get(i), Map.of("documentId", documentId, "key", "status", "values",
           Arrays.asList("active", "notactive"), "type", "USERDEFINED", "userId", "joesmith"));
     }
   }
@@ -1075,7 +1067,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension09() throws IOException {
     final String documentId = "12345";
     Map<String, Object> data = new HashMap<>();
@@ -1097,7 +1089,7 @@ public class StagingS3CreateTest implements DbKeys {
 
       Map<String, Object> map = loadFileAsMap(this, "/objectcreate-event4.json", UUID1, key);
 
-      byte[] content = gson.toJson(ditem).getBytes(UTF_8);
+      byte[] content = GSON.toJson(ditem).getBytes(UTF_8);
       s3.putObject(STAGING_BUCKET, key, content, null, null);
 
       // when
@@ -1126,7 +1118,7 @@ public class StagingS3CreateTest implements DbKeys {
       assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "status", "values",
           Arrays.asList("active", "notactive"), "type", "USERDEFINED", "userId", "joesmith"));
 
-      assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "test", "value",
+      assertEqualsTag(tags.get(i), Map.of("documentId", documentId, "key", "test", "value",
           "novalue", "type", "USERDEFINED", "userId", "joe"));
     }
   }
@@ -1137,7 +1129,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension10() throws IOException {
 
     final String documentId = "12345";
@@ -1163,7 +1155,7 @@ public class StagingS3CreateTest implements DbKeys {
 
       Map<String, Object> map = loadFileAsMap(this, "/objectcreate-event4.json", UUID1, key);
 
-      byte[] content = gson.toJson(ditem).getBytes(UTF_8);
+      byte[] content = GSON.toJson(ditem).getBytes(UTF_8);
       s3.putObject(STAGING_BUCKET, key, content, null, null);
 
       // when
@@ -1188,10 +1180,10 @@ public class StagingS3CreateTest implements DbKeys {
       actionsService.saveNewActions(siteId, documentId, actions);
 
       // given
-      data.put("actions", Arrays.asList(
-          Map.of("type", "ocr", "status", "PENDING", "parameters", Map.of("test", "1234"))));
+      data.put("actions", List
+          .of(Map.of("type", "ocr", "status", "PENDING", "parameters", Map.of("test", "1234"))));
       ditem = new DynamicDocumentItem(data);
-      content = gson.toJson(ditem).getBytes(UTF_8);
+      content = GSON.toJson(ditem).getBytes(UTF_8);
 
       s3.putObject(STAGING_BUCKET, key, content, null, null);
 
@@ -1214,7 +1206,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws InterruptedException InterruptedException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension11() throws IOException, InterruptedException {
 
     String path = "sample/test.txt";
@@ -1241,7 +1233,7 @@ public class StagingS3CreateTest implements DbKeys {
       // when - send the same path twice
       for (int i = 0; i < 2; i++) {
         ditem.put("content", "this is some content: " + i);
-        byte[] content = gson.toJson(ditem).getBytes(UTF_8);
+        byte[] content = GSON.toJson(ditem).getBytes(UTF_8);
         s3.putObject(STAGING_BUCKET, key, content, null, null);
 
         handleRequest(map);
@@ -1266,7 +1258,7 @@ public class StagingS3CreateTest implements DbKeys {
           service.findDocumentTags(siteId, documentId, null, MAX_RESULTS).getResults();
       assertEquals(count, tags.size());
 
-      assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "untagged", "value",
+      assertEqualsTag(tags.get(i), Map.of("documentId", documentId, "key", "untagged", "value",
           "true", "type", "SYSTEMDEFINED", "userId", "joesmith"));
 
       verifyCliSyncs(siteId, documentId);
@@ -1279,7 +1271,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension12() throws Exception {
     final Date now = new Date();
     final String userId = "joesmith";
@@ -1288,14 +1280,14 @@ public class StagingS3CreateTest implements DbKeys {
     Map<String, Object> data = new HashMap<>();
     data.put("documentId", documentId);
     data.put("userId", userId);
-    data.put("tags", Arrays.asList(Map.of("key", "category", "value", "document")));
+    data.put("tags", List.of(Map.of("key", "category", "value", "document")));
 
     DynamicDocumentItem ditem = new DynamicDocumentItem(data);
 
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
 
       DocumentItem item = new DocumentItemDynamoDb(documentId, now, "joe");
-      item.setContentLength(Long.valueOf(contentLength));
+      item.setContentLength(contentLength);
 
       service.saveDocument(siteId, item,
           Arrays.asList(new DocumentTag(documentId, "playerId", "1234", new Date(), userId),
@@ -1310,7 +1302,7 @@ public class StagingS3CreateTest implements DbKeys {
 
       Map<String, Object> map = loadFileAsMap(this, "/objectcreate-event4.json", UUID1, key);
 
-      byte[] content = gson.toJson(ditem).getBytes(UTF_8);
+      byte[] content = GSON.toJson(ditem).getBytes(UTF_8);
       s3.putObject(STAGING_BUCKET, key, content, null, null);
 
       TimeUnit.SECONDS.sleep(1);
@@ -1334,7 +1326,7 @@ public class StagingS3CreateTest implements DbKeys {
       assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "category", "value",
           "document", "type", "USERDEFINED", "userId", userId));
 
-      assertEqualsTag(tags.get(i++), Map.of("documentId", documentId, "key", "playerId", "value",
+      assertEqualsTag(tags.get(i), Map.of("documentId", documentId, "key", "playerId", "value",
           "1234", "type", "USERDEFINED", "userId", userId));
 
       List<Action> actions = actionsService.getActions(siteId, documentId);
@@ -1350,7 +1342,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension13() throws IOException {
     DynamicDocumentItem item = createDocumentItem();
 
@@ -1378,7 +1370,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws ValidationException ValidationException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension14() throws IOException, ValidationException {
 
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
@@ -1390,7 +1382,7 @@ public class StagingS3CreateTest implements DbKeys {
           Map.of("key", "playerId", "values", Arrays.asList("111", "222"))));
       service.saveDocument(siteId, item, null);
 
-      item.put("metadata", Arrays.asList(Map.of("key", "playerId", "value", "333")));
+      item.put("metadata", List.of(Map.of("key", "playerId", "value", "333")));
 
       processFkB64File(siteId, item, "14");
       DocumentItem doc = service.findDocument(siteId, item.getDocumentId());
@@ -1413,7 +1405,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws ValidationException ValidationException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension15() throws IOException, ValidationException {
 
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
@@ -1425,7 +1417,7 @@ public class StagingS3CreateTest implements DbKeys {
           Map.of("key", "playerId", "values", Arrays.asList("111", "222"))));
       service.saveDocument(siteId, item, null);
 
-      item.put("metadata", Arrays.asList(Map.of("key", "playerId")));
+      item.put("metadata", List.of(Map.of("key", "playerId")));
 
       processFkB64File(siteId, item, "14");
       DocumentItem doc = service.findDocument(siteId, item.getDocumentId());
@@ -1443,7 +1435,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension16() throws IOException {
 
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
@@ -1451,13 +1443,13 @@ public class StagingS3CreateTest implements DbKeys {
       DynamicDocumentItem item = createDocumentItem();
       item.setPath(null);
       item.remove("content");
-      item.put("tags", Arrays.asList(Map.of("key", "category", "value", "document")));
-      item.setDeepLinkPath("http://google.com/sample.pdf");
+      item.put("tags", List.of(Map.of("key", "category", "value", "document")));
+      item.setDeepLinkPath("https://google.com/sample.pdf");
       item.setContentType("application/pdf");
 
       processFkB64File(siteId, item, null);
       DocumentItem doc = service.findDocument(siteId, item.getDocumentId());
-      assertEquals("http://google.com/sample.pdf", doc.getDeepLinkPath());
+      assertEquals("https://google.com/sample.pdf", doc.getDeepLinkPath());
       assertEquals("sample.pdf", doc.getPath());
       assertEquals("application/pdf", doc.getContentType());
     }
@@ -1469,20 +1461,20 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws IOException IOException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension17() throws IOException {
 
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
 
       DynamicDocumentItem item = createDocumentItem();
       item.remove("content");
-      item.put("tags", Arrays.asList(Map.of("key", "category", "value", "document")));
-      item.setDeepLinkPath("http://google.com/sample.pdf");
+      item.put("tags", List.of(Map.of("key", "category", "value", "document")));
+      item.setDeepLinkPath("https://google.com/sample.pdf");
       item.setContentType("application/pdf");
 
       processFkB64File(siteId, item, null);
       DocumentItem doc = service.findDocument(siteId, item.getDocumentId());
-      assertEquals("http://google.com/sample.pdf", doc.getDeepLinkPath());
+      assertEquals("https://google.com/sample.pdf", doc.getDeepLinkPath());
       assertEquals("test.txt", doc.getPath());
       assertEquals("application/pdf", doc.getContentType());
     }
@@ -1495,14 +1487,14 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws ValidationException ValidationException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testFkB64Extension18() throws IOException, ValidationException {
 
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
 
       DynamicDocumentItem item = createDocumentItem();
-      item.put("tags", Arrays.asList(Map.of("key", "category", "value", "document")));
-      item.setDeepLinkPath("http://google.com/sample.pdf");
+      item.put("tags", List.of(Map.of("key", "category", "value", "document")));
+      item.setDeepLinkPath("https://google.com/sample.pdf");
       service.saveDocument(siteId, item, null);
 
       item.put("content", "this is some content");
@@ -1517,7 +1509,7 @@ public class StagingS3CreateTest implements DbKeys {
    * Test invalid request.
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testInvalidRequest() {
     // given
     Map<String, Object> requestMap = new HashMap<>();
@@ -1532,12 +1524,11 @@ public class StagingS3CreateTest implements DbKeys {
    * Test Update .fkb64 file attributes.
    *
    * @throws IOException IOException
-   * @throws ValidationException ValidationException
    */
   @SuppressWarnings("unchecked")
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
-  void testFkB64Extension19() throws IOException, ValidationException {
+  @Timeout(value = TEST_TIMEOUT)
+  void testFkB64Extension19() throws IOException {
     // given
     final int limit = 10;
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
@@ -1553,7 +1544,7 @@ public class StagingS3CreateTest implements DbKeys {
               + "\",\"actions\":[],\"contentType\":\"application/octet-stream\","
               + "\"userId\":\"joesmith\",\"content\":\"test\",\"tags\":[]}";
 
-      Map<String, Object> map = gson.fromJson(json, Map.class);
+      Map<String, Object> map = GSON.fromJson(json, Map.class);
       DynamicDocumentItem item = new DynamicDocumentItem(map);
 
       // when
@@ -1582,7 +1573,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws ValidationException ValidationException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testPatchDocumentsTags01() throws ValidationException {
     // given
     final int maxDocuments = 150;
@@ -1601,17 +1592,18 @@ public class StagingS3CreateTest implements DbKeys {
         documentIds.add(item.getDocumentId());
 
         Collection<DocumentTag> tags =
-            Arrays.asList(new DocumentTag(item.getDocumentId(), key, value, new Date(), "joe"));
+            List.of(new DocumentTag(item.getDocumentId(), key, value, new Date(), "joe"));
         service.saveDocument(siteId, item, tags);
       }
 
-      List<AddDocumentTag> tags = Arrays.asList(new AddDocumentTag().key(newKey).value(newValue));
+      List<AddDocumentTag> tags =
+          Collections.singletonList(new AddDocumentTag().key(newKey).value(newValue));
       UpdateMatchingDocumentTagsRequest req = new UpdateMatchingDocumentTagsRequest()
           .match(new UpdateMatchingDocumentTagsRequestMatch()
               .tag(new MatchDocumentTag().key(key).eq(value)))
           .update(new UpdateMatchingDocumentTagsRequestUpdate().tags(tags));
 
-      byte[] data = gson.toJson(req).getBytes(StandardCharsets.UTF_8);
+      byte[] data = GSON.toJson(req).getBytes(StandardCharsets.UTF_8);
 
       String s3Key =
           createS3Key(siteId, "patch_documents_tags_" + UUID.randomUUID() + FORMKIQ_B64_EXT);
@@ -1637,7 +1629,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws ValidationException ValidationException
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testPatchDocumentsTags02() throws ValidationException {
     // given
     for (String siteId : Arrays.asList(null, UUID.randomUUID().toString())) {
@@ -1654,7 +1646,7 @@ public class StagingS3CreateTest implements DbKeys {
       DynamicDocumentItem item = createDocumentItem();
 
       service.saveDocument(siteId, item,
-          Arrays.asList(new DocumentTag(item.getDocumentId(), key, value, new Date(), "joe")));
+          List.of(new DocumentTag(item.getDocumentId(), key, value, new Date(), "joe")));
 
       List<AddDocumentTag> tags = Arrays.asList(new AddDocumentTag().key(newKey0).value(newValue0),
           new AddDocumentTag().key(newKey1).value(newValue1));
@@ -1664,7 +1656,7 @@ public class StagingS3CreateTest implements DbKeys {
               .tag(new MatchDocumentTag().key(key).eq(value)))
           .update(new UpdateMatchingDocumentTagsRequestUpdate().tags(tags));
 
-      byte[] data = gson.toJson(req).getBytes(StandardCharsets.UTF_8);
+      byte[] data = GSON.toJson(req).getBytes(StandardCharsets.UTF_8);
 
       String s3Key =
           createS3Key(siteId, "patch_documents_tags_" + UUID.randomUUID() + FORMKIQ_B64_EXT);
@@ -1691,7 +1683,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testTempFilesZipEvent() throws Exception {
     final Map<String, Object> map = loadFileAsMap(this, "/temp-files-zip-created-event.json");
     final String key = "tempfiles/665f0228-4fbc-4511-912b-6cb6f566e1c0.zip";
@@ -1699,7 +1691,7 @@ public class StagingS3CreateTest implements DbKeys {
 
     assertTrue(this.logger.containsString(String.format("skipping event for key %s", key)));
 
-    verifySqsMessages(0, 0, 0);
+    verifySqsMessages();
   }
 
   /**
@@ -1708,7 +1700,7 @@ public class StagingS3CreateTest implements DbKeys {
    * @throws Exception Exception
    */
   @Test
-  @Timeout(unit = TimeUnit.SECONDS, value = TEST_TIMEOUT)
+  @Timeout(value = TEST_TIMEOUT)
   void testUnknownEvent01() throws Exception {
     // given
     final Map<String, Object> map = loadFileAsMap(this, "/objectunknown-event1.json");
@@ -1722,11 +1714,10 @@ public class StagingS3CreateTest implements DbKeys {
     assertTrue(this.logger.containsString("handling 1 record(s)."));
     assertTrue(this.logger.containsString("skipping event ObjectUnknwn:Delete"));
 
-    verifySqsMessages(0, 0, 0);
+    verifySqsMessages();
   }
 
-  private void verifyBelongsToDocument(final DocumentItem item, final String documentId,
-      final List<String> documentIds) {
+  private void verifyBelongsToDocument(final DocumentItem item, final List<String> documentIds) {
     assertEquals(documentIds.size(), item.getDocuments().size());
 
     for (int i = 0; i < documentIds.size(); i++) {
@@ -1755,7 +1746,7 @@ public class StagingS3CreateTest implements DbKeys {
     assertEquals(DocumentSyncStatus.COMPLETE, results.get(i).getStatus());
     assertEquals(DocumentSyncType.CONTENT, results.get(i).getType());
     assertEquals("added Document Content", results.get(i).getMessage());
-    assertNotNull(results.get(i++).getSyncDate());
+    assertNotNull(results.get(i).getSyncDate());
   }
 
   private void verifyS3Metadata(final String siteId, final DocumentItem item) {
@@ -1768,30 +1759,23 @@ public class StagingS3CreateTest implements DbKeys {
 
   /**
    * Verify SQS Messages.
-   *
-   * @param createCount int
-   * @param deleteCount int
-   * @param errorCount int
-   * @return {@link List} {@link DocumentEvent}
    */
-  private List<DocumentEvent> verifySqsMessages(final int createCount, final int deleteCount,
-      final int errorCount) {
+  private void verifySqsMessages() {
 
     final List<Message> create = sqsService.receiveMessages(snsSqsCreateQueueUrl).messages();
     final List<Message> delete = sqsService.receiveMessages(snsSqsDeleteQueueUrl).messages();
 
-    assertEquals(createCount, create.size());
-    assertEquals(deleteCount, delete.size());
+    assertEquals(0, create.size());
+    assertEquals(0, delete.size());
 
     List<Message> list = new ArrayList<>(create);
     list.addAll(delete);
 
     @SuppressWarnings("unchecked")
     List<Map<String, Object>> maps =
-        list.stream().map(m -> (Map<String, Object>) gson.fromJson(m.body(), Map.class))
-            .collect(Collectors.toList());
+        list.stream().map(m -> (Map<String, Object>) GSON.fromJson(m.body(), Map.class)).toList();
 
-    return maps.stream().map(m -> gson.fromJson(m.get("Message").toString(), DocumentEvent.class))
+    maps.stream().map(m -> GSON.fromJson(m.get("Message").toString(), DocumentEvent.class))
         .collect(Collectors.toList());
   }
 }
